# WP

./: .gitignore  CMakeLists.txt  Makefile  README.md  UML1.mdj  UML2.mdj
CardIdeas/: listCreatures.csv  listSpells.csv
SRD/: CMakeLists.txt  Deck.mdj  Game.mdj  Global.mdj  Makefile  Server.mdj  UML2.mdj  glossaire.tex  srd.tex  stack.mdj  titlepage.tex
binNO4/: WizardPoker_chat  WizardPoker_client  WizardPoker_server  server.ini
include/cards/: card.hpp
include/chat/: AbstractChat.hpp
include/chat/Gui/: GuiChat.hpp
include/chat/Terminal/: TerminalChat.hpp
include/client/: AbstractApplication.hpp  AbstractGame.hpp  AbstractState.hpp  AchievementData.hpp  Card.hpp  CardData.hpp  ClientAchievement.hpp  ClientCard.hpp  ClientCardData.hpp  ClientCreature.hpp  ClientDatabase.hpp  ClientSpell.hpp  Context.hpp  ErrorCode.hpp  Game.hpp  NonBlockingInput.hpp  StateStack.hpp  database.hpp
include/client/Gui/: AchievementGui.hpp  AchievementWidget.hpp  CardGui.hpp  CardWidget.hpp  CreatureGui.hpp  GuiAbstractState.hpp  GuiApplication.hpp  GuiGame.hpp  InputBox.hpp  SpellGUI.hpp  SpellGui.hpp  cardGUI.hpp
include/client/Terminal/: TerminalAbstractState.hpp  TerminalApplication.hpp  TerminalGame.hpp
include/client/sockets/: Client.hpp  Connection.hpp
include/client/states/: AbstractAchievementState.hpp  AbstractCardsCollectionState.hpp  AbstractDecksManagementState.hpp  AbstractFriendsManagementState.hpp  AbstractHomeState.hpp  AbstractLadderState.hpp  AbstractLobbyState.hpp  AbstractMainMenuState.hpp  CardsCollectionState.hpp  ChatSelectionState.hpp  DecksManagementState.hpp  FriendsManagementState.hpp  GameState.hpp  HomeState.hpp  LadderState.hpp  LobbyState.hpp  MainMenuState.hpp  MatchmakingState.hpp
include/common/: Account.hpp  Achievement.hpp  Achievements.hpp  BoardState.hpp  Card.hpp  CardData.hpp  CardData.inc  CardsCollection.hpp  ConfigData.hpp  ConfigParser.hpp  Creature.hpp  Database.hpp  Deck.hpp  ErrorCode.hpp  GameData.hpp  Identifiers.hpp  Ladder.hpp  Monster.hpp  NotConnectedException.hpp  PasswordHasher.hpp  Spell.hpp  StrToInt.hpp  Terminal.hpp  UnableToConnectException.hpp  card.hpp  constants.hpp  database.hpp  effect.hpp  listMonsters.csv  listSpells.csv  monster.hpp
include/common/ini/: IniFile.hpp
include/server/: Board.hpp  Card.hpp  CardData.hpp  ClientInformations.hpp  Constraints.hpp  Creature.hpp  ErrorCode.hpp  GameThread.hpp  Player.hpp  PostGameData.hpp  Server.hpp  ServerCardData.hpp  ServerDatabase.hpp  Spell.hpp  database.hpp
prebuildscript/: Achievements.sql  Cards.sql  compileCardDataPass1.sed  compileCardDataPass2.sed  initdatabase.sh  initdatabase.sql  installDependencies.sh
resources/client/: database.db
resources/common/: initdatabase.sql
resources/server/: .fuse_hidden000021fa00000022  .fuse_hidden000022740000002b  database.db
ressources/client/: database.db
ressources/common/: database.db  initdatabase.sql
ressources/server/: database.db
src/: CMakeLists.txt  main.cpp
src/cards/: card.hpp  effect.hpp  monster.hpp
src/chat/: AbstractChat.cpp  CMakeLists.txt  chat.cpp
src/chat/Gui/: GuiChat.cpp
src/chat/Terminal/: TerminalChat.cpp
src/client/: AbstractApplication.cpp  AbstractGame.cpp  AbstractState.cpp  CMakeLists.txt  CardData.cpp  ClientAchievement.cpp  ClientCard.cpp  ClientCardData.cpp  ClientCreature.cpp  ClientDatabase.cpp  ClientSpell.cpp  Game.cpp  NonBlockingInput.cpp  StateStack.cpp  client.cpp  database.cpp
src/client/Gui/: AchievementGui.cpp  AchievementWidget.cpp  CardGui.cpp  CardWidget.cpp  CreatureGUI.cpp  CreatureGui.cpp  GuiAbstractState.cpp  GuiApplication.cpp  GuiGame.cpp  InputBox.cpp  SpellGUI.cpp  SpellGui.cpp  cardGUI.cpp
src/client/Gui/states/: GuiAchievementState.cpp  GuiCardsCollectionState.cpp  GuiDecksManagementState.cpp  GuiFriendsManagementState.cpp  GuiHomeState.cpp  GuiLadderState.cpp  GuiLobbyState.cpp  GuiMainMenuState.cpp
src/client/Terminal/: TerminalAbstractState.cpp  TerminalApplication.cpp  TerminalGame.cpp
src/client/Terminal/states/: TerminalAchievementState.cpp  TerminalCardsCollectionState.cpp  TerminalDecksManagementState.cpp  TerminalFriendsManagementState.cpp  TerminalHomeState.cpp  TerminalLadderState.cpp  TerminalLobbyState.cpp  TerminalMainMenuState.cpp
src/client/sockets/: ChatListening.cpp  Client.cpp  Connection.cpp
src/client/states/: AbstractAchievementState.cpp  AbstractCardsCollectionState.cpp  AbstractDecksManagementState.cpp  AbstractFriendsManagementState.cpp  AbstractHomeState.cpp  AbstractLadderState.cpp  AbstractLobbyState.cpp  AbstractMainMenuState.cpp  CardsCollectionState.cpp  ChatSelectionState.cpp  DecksManagementState.cpp  FriendsManagementState.cpp  GameState.cpp  HomeState.cpp  LadderState.cpp  LobbyState.cpp  MainMenuState.cpp  MatchmakingState.cpp
src/common/: Achievement.cpp  Achievements.cpp  CMakeLists.txt  Card.cpp  CardData.cpp  CardsCollection.cpp  ConfigParser.cpp  Database.cpp  Deck.cpp  Ladder.cpp  NotConnectedException.cpp  PasswordHasher.cpp  StrToInt.cpp  Terminal.cpp  UnableToConnectException.cpp  database.cpp
src/common/ini/: IniFile.cpp
src/common/random/: RandomInteger.cpp
src/common/sockets/: PacketOverload.cpp  TransferType.cpp
src/server/: Board.cpp  CMakeLists.txt  Card.cpp  CardData.cpp  Cards.cpp  Constraints.cpp  Creature.cpp  Player.cpp  PostGameData.cpp  ServerCardData.cpp  ServerDatabase.cpp  Spell.cpp  database.cpp  server.cpp
src/server/sockets/: GameThread.cpp  Server.cpp
tests/: CMakeLists.txt  main.cpp
tests/client/: AbstractStateTests.cpp  StateStackTests.cpp
tests/client/sockets/: ChatListeningTests.cpp  ClientTests.cpp
tests/client/states/: .goutputstream-GCQQCY  CardsCollectionStateTests.cpp  DecksManagementStateTests.cpp  FriendsManagementStateTests.cpp  HomeStateTests.cpp  LadderStateTests.cpp  MainMenuStateTests.cpp
tests/common/: NotConnectedExceptionTests.cpp  TerminalTests.cpp
tests/common/ini/: IniFileTests.cpp
tests/common/sockets/: PacketOverloadTests.cpp  TransferTypeTests.cpp
tests/server/sockets/: ServerTests.cpp
(+22 files in other folders)
